--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
-    "stylelint-prettier": "^2.0.0"
+    "stylelint-prettier": "^2.0.0",
+    "typescript": "^4.6.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
